[package]
name = "hyperliquid-sdk-rs"
description = "High-performance Rust SDK for Hyperliquid Protocol"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["Leo Hermoso"]
license = "MIT"
repository = "https://github.com/lhermoso/hyperliquid-rust-sdk"
readme = "README.md"
keywords = ["hyperliquid", "crypto", "defi", "trading", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
alloy = { version = "0.1", features = [ "full" ] }

# HTTP client stack
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["client", "http2"] }
hyper-rustls = "0.27"  # TLS support
http-body-util = "0.1"
http = "1"

# WebSocket
fastwebsockets = { version = "0.6", features = ["upgrade", "simd"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }


# JSON parsing
simd-json = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
dashmap = "6"
url = "2.5"
hex = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
rmp-serde = "1.1"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
