[package]
name = "hyperliquid-sdk-rs"
description = "High-performance Rust SDK for Hyperliquid Protocol"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
authors = ["Leo Hermoso"]
license = "MIT"
repository = "https://github.com/lhermoso/hyperliquid-rust-sdk"
readme = "README.md"
keywords = ["hyperliquid", "crypto", "defi", "trading", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
alloy = { version = "1.1.3", features = ["full"] }

# HTTP client stack
hyper = { version = "1.8.1", features = ["client", "http2"] }
hyper-util = { version = "0.1.19", features = ["client", "http2"] }
hyper-rustls = "0.27.7"                                             # TLS support
http-body-util = "0.1.3"
http = "1.4.0"

# WebSocket
fastwebsockets = { version = "0.10.0", features = ["upgrade", "simd"] }
rustls = { version = "0.23.35", features = ["aws_lc_rs"] }


# JSON parsing
simd-json = "0.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"

# Error handling
thiserror = "2.0.17"

# Logging
tracing = "0.1.43"

# Utilities
dashmap = "6.1.0"
url = "2.5.7"
hex = "0.4.3"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
rmp-serde = "1.3.0"
base64 = "0.22.1"
rand = "0.9.2"
reqwest = { version = "0.12.26", features = ["json"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
hex = "0.4.3"
reqwest = { version = "0.12.26", features = ["json"] }


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
